--- a/trunk/NZOR/Data/Data.csproj
+++ b/trunk/NZOR/Data/Data.csproj
@@ -61,6 +61,10 @@
   <ItemGroup>
     <Compile Include="Consensus\ConsensusName.cs" />
     <Compile Include="DBI.cs" />
+    <Compile Include="DsIntegrationName.cs">
+      <DependentUpon>DsIntegrationName.xsd</DependentUpon>
+      <SubType>Component</SubType>
+    </Compile>
     <Compile Include="DsNameMatch.cs">
       <DependentUpon>DsNameMatch.xsd</DependentUpon>
       <SubType>Component</SubType>
@@ -70,9 +74,19 @@
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
     </Compile>
+    <Compile Include="DsIntegrationName.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>DsIntegrationName.xsd</DependentUpon>
+    </Compile>
     <Compile Include="Enums.cs" />
     <Compile Include="MatchResults.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Properties\Settings.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTimeSharedInput>True</DesignTimeSharedInput>
+      <DependentUpon>Settings.settings</DependentUpon>
+    </Compile>
     <Compile Include="Provider\ProviderName.cs" />
     <Compile Include="SystemData\ConceptRelationshipType.cs" />
     <Compile Include="SystemData\TaxonRank.cs" />
@@ -89,6 +103,21 @@
     </None>
     <None Include="DsNameMatch.xss">
       <DependentUpon>DsNameMatch.xsd</DependentUpon>
+    </None>
+    <None Include="DsIntegrationName.xsc">
+      <DependentUpon>DsIntegrationName.xsd</DependentUpon>
+    </None>
+    <None Include="DsIntegrationName.xsd">
+      <SubType>Designer</SubType>
+      <Generator>MSDataSetGenerator</Generator>
+      <LastGenOutput>DsIntegrationName.Designer.cs</LastGenOutput>
+    </None>
+    <None Include="DsIntegrationName.xss">
+      <DependentUpon>DsIntegrationName.xsd</DependentUpon>
+    </None>
+    <None Include="Properties\Settings.settings">
+      <Generator>SettingsSingleFileGenerator</Generator>
+      <LastGenOutput>Settings.Designer.cs</LastGenOutput>
     </None>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
