--- a/trunk/NZOR/NZORConsole/App.config
+++ b/trunk/NZOR/NZORConsole/App.config
@@ -1,7 +1,7 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+<?xml version="1.0"?>
 <configuration>
   <connectionStrings>
-    <add name="NZOR" connectionString="data source=devserver05;Initial Catalog=NZOR_Data_Test;user id=nzor_user;password=nzor" />
+    <add name="NZOR" connectionString="data source=devserver05;Initial Catalog=NZOR_Data_Test;user id=nzor_user;password=nzor"/>
     <!--add name="NZOR" connectionString="data source=idt-laptop;Initial Catalog=NZOR_Data_Test;integrated security=true" /-->
   </connectionStrings>
-</configuration>
+<startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0"/></startup></configuration>
