--- a/trunk/NZOR/NZORTestClient/App.config
+++ b/trunk/NZOR/NZORTestClient/App.config
@@ -1,8 +1,8 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+﻿<?xml version="1.0"?>
 <configuration>
   <connectionStrings>
-    <add name="NZOR" connectionString="Data Source=devserver05;Initial Catalog=NZOR_Data;Integrated Security=True" />
+    <add name="NZOR" connectionString="Data Source=devserver05;Initial Catalog=NZOR_Data_Test;Integrated Security=True"/>
   </connectionStrings>
   <appSettings>
   </appSettings>
-</configuration>
+<startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0"/></startup></configuration>
